add global stats section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Awareness App</title>
     </head>
@@ -39,5 +39,87 @@
 
             <img src="./assets/hero.png" alt="">
         </header>
+
+        <div class="stats-title">
+            <h2>
+                Global Stats
+            </h2>
+            <p>(The spread of Covid - 19 across the world)</p>
+        </div>
+
+        <main class="stats">
+            <div class="stats-region">
+                <div>
+                    <p>
+                        Total Cases
+                        <br />
+                        <span>
+                            31 M
+                        </span>
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Recovered
+                        <br />
+                        <span>
+                            30 M
+                        </span>
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Deaths
+                        <br />
+                        <span>
+                            413 K
+                        </span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="stats-global">
+                <div>
+                    <p>
+                        Total Cases
+                        <span>
+                            190 M
+                        </span>
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Recovered
+                        <span>
+                            89.6 M
+                        </span>
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        Deaths
+                        <span>
+                            4.08 M
+                        </span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="stats-map">
+                <div>
+                    <img src="./assets/map.png" alt="">
+                    
+                    <div class="dots">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
+                </div>
+            </div>
+
+        </main>
     </body>
 </html>
