add final result

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <br />
                 Stay Safe</h1>
                 <hr />
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras iaculis pellentesque nunc ac laoreet. Sed a vulputate augue. Suspendisse accumsan magna non nulla dignissim, vitae lacinia mi vulputate.</p>
+                <p class="description">The 2019 novel coronavirus (2019-nCoV), officially named as COVID 19 pandemic by the WHO, has spread to more than 180 countries including China.</p>
             </div>
 
             <img src="./assets/hero.png" alt="">
         </header>
 
-        <div class="stats-title">
+        <div class="title">
             <h2>
                 Global Stats
             </h2>
@@ -121,5 +121,91 @@
             </div>
 
         </main>
+
+        <div>
+            <div class="title">
+                <h2>
+                    Precautions
+                </h2>
+                <p>Stopping the spread starts with you</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <div class="precautions-step">
+                        <img src="./assets/digits/01.svg" alt="">
+                        <p>Wear a mask</p>
+                    </div>
+                    <img width="150" src="./assets/02.svg" alt="">
+                </div>
+                <p class="precautions-text">Wear a mask at all times</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <img width="150" src="./assets/04.svg" alt="">
+                    <div class="precautions-step">
+                        <img src="./assets/digits/02.svg" alt="">
+                        <p>Wash hands</p>
+                    </div>
+                </div>
+                <p class="precautions-text">Clean your hands often. Use soap and water or an alcohol-based rub</p>
+            </div>
+            
+            <div class="precautions-item">
+                <div>
+                    <div class="precautions-step">
+                        <img src="./assets/digits/03.svg" alt="">
+                        <p>Social distancing</p>
+                    </div>
+                    <img width="150" src="./assets/03.svg" alt="">
+                </div>
+                <p class="precautions-text">Maintain a safe distance</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <img width="150" src="./assets/05.svg" alt="">
+                    <div class="precautions-step">
+                        <img src="./assets/digits/04.svg" alt="">
+                        <p>Stay home</p>
+                    </div>
+                </div>
+                <p class="precautions-text">Stay home to reduce the spread</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <div class="precautions-step">
+                        <img src="./assets/digits/05.svg" alt="">
+                        <p>Self quarantine</p>
+                    </div>
+                    <img width="150" src="./assets/01.svg" alt="">
+                </div>
+                <p class="precautions-text">If you have a fever, cough and difficulty breathing, seek medical attention</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <img width="150" src="./assets/06.svg" alt="">
+                    <div class="precautions-step">
+                        <img src="./assets/digits/06.svg" alt="">
+                        <p>Take care</p>
+                    </div>
+                </div>
+                <p class="precautions-text">If you feel unwell, stay home and take care</p>
+            </div>
+
+            <div class="precautions-item">
+                <div>
+                    <div class="precautions-step">
+                        <img src="./assets/digits/07.svg" alt="">
+                        <p>Be aware</p>
+                    </div>
+                    <img width="150" src="./assets/08.svg" alt="">
+                </div>
+                <p class="precautions-text">Don't touch your eyes, nose or mouth</p>
+            </div>
+        </div>
     </body>
 </html>
